# ChatSKCET

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  scrape.ipynb  st_app.py  tsconfig.json
chroma/2f894c79-2f13-4193-85ce-bfa7e1d31cdc/: index_metadata.pickle
data/: skcet.jsonl
src/app/: ai.tsx  globals.css  layout.tsx  page.tsx  types.ts
